--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "material-design-icons-iconfont": "^3.0.3",
+    "material-icons-css": "^1.0.1",
+    "material-ui": "^0.18.2",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-tap-event-plugin": "^2.0.1",
+    "roboto-fontface": "^0.7.0"
   },
   "devDependencies": {
     "prettier-standard": "^5.0.0",
