--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "file-saver": "^1.3.3",
     "material-design-icons-iconfont": "^3.0.3",
     "material-icons-css": "^1.0.1",
     "material-ui": "^0.18.2",
