--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^5.1.5",
     "file-saver": "^1.3.3",
+    "lodash": "^4.17.4",
     "material-design-icons-iconfont": "^3.0.3",
     "material-icons-css": "^1.0.1",
     "material-ui": "^0.18.2",
